objects/ccrz__E_BreadCrumb__c.object
<CustomObject>
    <description>A flattened table listing the drill down path to each category for each locale. This is used to construct the category tree.</description>
    <fields>
        <fullName>ccrz__BreadCrumbId__c</fullName>
        <description>External Id autonumber for breadcrumb</description>
        <displayFormat>{00000000}</displayFormat>
        <externalId>true</externalId>
        <label>BreadCrumb Id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ccrz__BreadCrumbWithLocale__c</fullName>
        <label>BreadCrumbWithLocale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__BreadcrumbURL__c</fullName>
        <label>Breadcrumb URL</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__Breadcrumb__c</fullName>
        <label>Breadcrumb</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CategoryId__c</fullName>
        <label>Category Id</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__CategoryName__c</fullName>
        <label>Category Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <label>Locale</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__SequenceName__c</fullName>
        <label>Sequence Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ccrz__TopLevelFlag__c</fullName>
        <label>TopLevel Flag</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__TopLevelIndex__c</fullName>
        <label>TopLevel Index</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>CC BreadCrumb</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>NAME</columns>
        <columns>ccrz__Breadcrumb__c</columns>
        <columns>ccrz__BreadcrumbURL__c</columns>
        <columns>ccrz__BreadCrumbWithLocale__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BreadCrumb Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CC BreadCrumbs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>